# mcp-mem0

./: .env.example  .gitignore  CLAUDE_DESKTOP_SETUP.md  Makefile  README.md  README_BACKUP.md  README_SIMPLE.md  USAGE.md  VSCODE_SETUP.md  augment-config.json  auto_start.bat  check_mcp_config.py  claude-desktop-config.json  docker-compose.yml  mcp-config.json  mcp-dockmaster.json  mcp-server.json  mcp.json  mcp_direct.py  mcp_http.py  package.json  pyproject.toml  start.bat  start.sh  start_server.py  test_claude_desktop_config.py  test_mcp_server.py
public/: README.md
