[project]
name = "mem0-mcp"
version = "0.1.0"
description = "MCP server for integrating long term memory into AI agents with Mem0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "mem0ai>=0.1.88",
    "vecs>=0.4.5"
]

[tool.mcp]
command = "python"
args = ["main.py"]

[tool.mcp.env]
TRANSPORT = "stdio"
LLM_PROVIDER = "openai"
LLM_BASE_URL = "https://api.openai.com/v1"
LLM_API_KEY = "sk-your-openai-api-key-here"
LLM_CHOICE = "gpt-4o-mini"
EMBEDDING_MODEL_CHOICE = "text-embedding-3-small"
DATABASE_URL = "postgresql://mem0user:mem0password@localhost:5432/mem0db"
